<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.saadahmedsoft.fakestoreapp.services.model.product.ProductResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ripple_bg_white_5"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_25sdp">

            <TextView
                android:id="@+id/tv_out_of_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_light_red_5"
                android:fontFamily="@font/regular"
                android:paddingStart="@dimen/_7sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/out_of_stock"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_10ssp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_out_of_stock"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:ellipsize="end"
                android:fontFamily="@font/medium"
                android:maxLines="2"
                android:text="@{item.title}"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_image" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/bold"
                android:text="@{`৳ ` + item.price}"
                android:textColor="@color/colorPink"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/tv_product_title" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/price"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="@id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/price" />

            <TextView
                android:id="@+id/tv_main_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPink"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="@id/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/price" />

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:fontFamily="@font/bold"
                android:maxLines="1"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_category"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/category"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="@id/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_cart"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_light_pink_25"
            app:layout_constraintTop_toBottomOf="@id/layout_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/layout_top">

            <TextView
                android:id="@+id/btn_minus"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_quantity"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/circle_light_pink"
                android:textColor="@color/static_white"
                android:text="@string/minus"
                android:gravity="center"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:id="@+id/btn_plus"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/tv_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/circle_gradient"
                android:textColor="@color/static_white"
                android:text="@string/plus"
                android:gravity="center"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/medium"
                android:textColor="@color/colorPink"
                android:textSize="@dimen/_11ssp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>